--- a/VRChat/36/1069736.html
+++ b/VRChat/36/1069736.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QFxHxqnui2ARgcumQTyfA64rGxYkrrFhTG2SfMGJKnw="></script>
+    "yZiPm1/Yqf/NtQKICdulrTADjQI/+CrfD9xaPUz+BI4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版有】VRCHAT用ハロウィンアバター made by VRoid","description":"VRCHAT用のハロウィンアバターです。\n\n無料版は有料版に比べてテクスチャ等が所々甘いです。\n\n\n◆無料版内容\n・free_halloween.vrm\nVRCHAT用のvrmです。uniVRMを利用し、\nコンポーネントを整理するだけで\nVRCHATで利用できます。\n\n◆有料版内容\n・halloween.vrm\nテクスチャ等を修正した完品\nVRCHAT等で利用できます。\n\n\n・highpoly_halloween.vrm\nポリゴン数:27940のためVRCHATでは利用できません。\n\n\n両方.vrmしか用意しておりませんので、.fbx等で利用したい場合は\n利用者自身での変換をお願いします。\n\n・おまけでVRoidのプロジェクトファイルもつけています。\n\n\n◆利用規約\n再配布以外は好きに使っていただいてかまいません。\n\n\n","url":"https://booth.pm/ja/items/1069736","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/45b34067-252f-44d6-a553-5c8693247cfd/i/1069736/f7cbbb4e-68b8-4ebe-a8e9-b8b3158b626a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QFxHxqnui2ARgcumQTyfA64rGxYkrrFhTG2SfMGJKnw="></script>
+    nonce="yZiPm1/Yqf/NtQKICdulrTADjQI/+CrfD9xaPUz+BI4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1069736/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1069736/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
