--- a/VRChat/83/1335983.html
+++ b/VRChat/83/1335983.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eA04e3NigNI01s21AIYbP5kAErpxD5BymInljF4BbJs="></script>
+    "j8uwH+W1dBgYuIhTN8li61sWyMQMkMLp2K6EtH0ZB5w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"藤のかんざしの3Dモデル（△1058ポリゴン）【VRChat使用可、オリジナル3Dモデル】","description":"藤のかんざしの3Dモデル（△1058ポリゴン）です。\n\nかんざし部分と藤部分を別々に動かせるようにボーンを設定しました。ボーンの角度を変更することでお好みの角度で固定できます。DynamicBoneを導入することで藤だけを揺らすこともできます。\n\nUnityPackage内のPrefabsフォルダに、画像のように見える設定をしたPrefabを作ってあります。\nまた、Arktoon-Shadersを同梱しました。\nもし他のシェーダーに変更される場合は、メッシュの裏面描画とPNGデータの透明部分を利用できるシェーダーをお使いください。\nDynamicBoneも設定してあります。お好みの揺れ方に調整してください。\n\n---------------------------------------------------------------\nファイルの中身\n・Kanzashi_Fuji.unitypackage\n・Kanzashi_Fuji.fbx（△1058ポリゴン）\n・Kanzashi_Albedo.png\n・Kanzashi_Metallic.png\n・Kanzashi_Normal.png\n\nテクスチャデータはサイズ2048で制作しました。\nsampleシーンはunity version 2017.4.15f1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為への使用を禁止します。","url":"https://booth.pm/ja/items/1335983","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1335983/0603f4e3-f978-4383-8351-98f143668b0d_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eA04e3NigNI01s21AIYbP5kAErpxD5BymInljF4BbJs="></script>
+    nonce="j8uwH+W1dBgYuIhTN8li61sWyMQMkMLp2K6EtH0ZB5w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +121,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -165,7 +167,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1335983/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
@@ -180,14 +182,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1335983/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               37
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
