--- a/VRChat/76/1336076.html
+++ b/VRChat/76/1336076.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KZ04r0uFne1ZYOj98pCBzcQQ5d+SGbVTfCE6x/f1eDs="></script>
+    "8xW7DY7tpjh0sD2SZyGRpsR+5eGyjBeoNOmIKZdG+JQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　ろぽり","description":"このアバターはAvatars3.0に対応しています。\n■データ概要\n\n・Unitypackage\n・FBX\n・Texture(png）\n・blenderファイル\n\n■利用規約\n・本データをご利用いただいた時点で利用規約に同意したものとみなします。\n・商用、非商用どちらも利用可能です。\n・本データの転載、再配布、ペデスタル利用、パブリックでのアップロードを禁止します。\n・本データ使用によるいかなる損害にも制作者は一切責任を負いません。\n・他人が不快に感じる表現や用途への使用を禁止します。。\n・宗教や政治活動での使用禁止します。\n・公序良俗に反する利用は禁止します。\n\n◆補足\n本規約における再配布の定義の中にVRCへのデータのアップロードは含まれておりません。ただし、アバターペデスタルへの利用、およびパブリック状態でのアップロードを禁止します。\n","url":"https://booth.pm/ja/items/1336076","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/1a3d7c54-a290-40a4-b267-0f2e041fef9a/i/1336076/5e5d8f13-7e0b-4d03-bc25-5f5848fdae89_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KZ04r0uFne1ZYOj98pCBzcQQ5d+SGbVTfCE6x/f1eDs="></script>
+    nonce="8xW7DY7tpjh0sD2SZyGRpsR+5eGyjBeoNOmIKZdG+JQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336076/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              561
+                              562
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336076/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              561
+                              562
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
