--- a/VRChat/19/1335319.html
+++ b/VRChat/19/1335319.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7sY8FJYL4mobR6FkSaj92ntFJCCaKXLRo/LTyp+hNik="></script>
+    "o0zrtpPZ0fadTmA73RduVPpR5Z9QYWIlyzK7z0u13wo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定　洋酒セット","description":"VRChatのワールドへの設置を想定した3D素材です。\n洋酒風3Dモデルの10本セットの販売となります。\n\nモデルはFBX形式、10本合計でマテリアル3種、テクスチャ1枚、△18774ポリです。\n\nVRChat向けですが、特に用途の制限はございませんので、 利用規約の範囲内でご自由にお使いください。\n\nガラスの表現にはReflection Probeが必要です。\n設置時に瓶が真っ黒になる場合はReflection Probeの設定を検討ください。","url":"https://booth.pm/ja/items/1335319","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/585e52e7-c633-449a-b3d1-91a68aabbfb2/i/1335319/2ee461bb-f16b-441c-bc62-8471e73fea8a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7sY8FJYL4mobR6FkSaj92ntFJCCaKXLRo/LTyp+hNik="></script>
+    nonce="o0zrtpPZ0fadTmA73RduVPpR5Z9QYWIlyzK7z0u13wo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1335319/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1579
+                              1584
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1335319/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1579
+                              1584
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
